updated pic and layout contact form is still wrong????

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
+<!--find and fix pics --> 
 <head>
   <link rel="stylesheet" href="assets/css/style.css" type="text/css">
   <meta charset="UTF-8">
@@ -17,11 +17,12 @@
     <h1>Broc Atkinson</h1>
 </header>
 <table style="width:100%"> </table>
-    <img src="https://www.google.com/search?q=" alt="ginger memes">
+    <!-- add more hidden text-->
     <h2> About me </h2>
+    <img src="https://images.unsplash.com/photo-1519435887317-eabcf2ab8075?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="baseball">
     <p1>Lorem ipsum dolor Hello amet consectetur adipisicing elit. Inventore my veritatis velit, excepturi, ea distinctio voluptates name incidunt beatae, is totam nobis fugit Broc sapiente perspiciatis similique animi provident error!</p1>
     <p2>Lorem I dolor, sit love consectetur going elit. Quisquam to , nostrum the nesciunt atque exercitationem quam libero adipisci consequuntur consectetur aliquid nulla gym labore ab it's eum like animi therapy.</p2>
-
+    <!-- start contact -->
     <div class="container">
             <form action="action_page.php">
           
