new project blew up last one

--- a/index.html
+++ b/index.html
@@ -4,40 +4,19 @@
 <head>
   <link rel="stylesheet" href="assets/css/style.css" type="text/css">
   <meta charset="UTF-8">
-  <title>Student Bio</title>
-  <div id="navbar">
-    <a href="#About">About</a>
-    <a href="#Portfolio">Portfolio</a>
-    <a href="#contact">Contact</a>
-  </div>
-</head>
+  <title>Broc Atkinson</title>
+  
+  <header> <font size="20"><Broc Atkinson</header>
+  <br>
+    </a>
+    <div id="navbar">
+      <a href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+    </div>
+    <br>
+<div><h1>About Me</h1></div>
+<img src="https://media.istockphoto.com/photos/epic-super-cell-storm-cloud-picture-id947951228?k=6&m=947951228&s=612x612&w=0&h=wlDtEGJwUMhrpv3WhD2EuJeaRW73D9PvKflRAZZiNus=">
+<p>lorem50</p>
 
-<body>
-<header>
-    <h1>Broc Atkinson</h1>
-</header>
-<table style="width:100%"> </table>
-    <!-- add more hidden text-->
-    <h2> About me </h2>
-    <img src="https://images.unsplash.com/photo-1519435887317-eabcf2ab8075?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="baseball">
-    <p1>Lorem ipsum dolor Hello amet consectetur adipisicing elit. Inventore my veritatis velit, excepturi, ea distinctio voluptates name incidunt beatae, is totam nobis fugit Broc sapiente perspiciatis similique animi provident error!</p1>
-    <p2>Lorem I dolor, sit love consectetur going elit. Quisquam to , nostrum the nesciunt atque exercitationem quam libero adipisci consequuntur consectetur aliquid nulla gym labore ab it's eum like animi therapy.</p2>
-    <!-- start contact -->
-    <div class="container">
-            <form action="action_page.php">
-          
-              <label for="Name">Name</label>
-              <input type="text" id="Name" name="Name" placeholder="Your name..">
-          
-              <label for="email">Email</label>
-              <input type="text" id="email" name="Email" placeholder="Your Email">
-     </select>
-     <label for="Message">Message</label>
-     <textarea id="Message" name="Message" placeholder="Share your feedback" style="height:200px"></textarea>
-    <input type="submit" value="Submit">
-    </form>
-</div>
-    <h3>Portfolio</h3>
-    <div class="container">
-      <img src="img_snow_wide.jpg" alt="hangman game" style="width:25%;">
-      <div class="bottom-left">hangman</div>
+ 
