--- a/index.html
+++ b/index.html
@@ -2,24 +2,38 @@
 <html lang="en-us">
 
 <head>
+  
+  <link rel="stylesheet" href="Bootstrap-Portfolio/assets/css/style.css" type="text/css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/style.css" type="text/css">
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Broc Atkinson</title>
   
 
-  <!-- As a link -->
+  <!-- bootstrap Nav -->
 <div>
     <div class="header" style="background-color:teal;">
         <p>Broc Atkinson</p>
     </div>
-<div>   
-    <nav class="navbar">
-    <a class="navbar-brand" >About Me</a>
-    <a class="navbar-brand" >Contact</a>
-    <a class="navbar-brand" >Portfolio</a>
-    </nav>
-</div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Portfolio</a>
+            </li>
+        </div>
+      </nav>
 
 <div>
 <h1>About Me</h1>
